--- a/project.config
+++ b/project.config
@@ -2,3 +2,6 @@
 	inheritFrom = Calyx-Projects
 [submit]
 	action = inherit
+[access "refs/heads/*"]
+	label-Code-Review = -2..+2 group Calyx Web
+	submit = group Calyx Web
